<resources>
    <string name="app_name">Chronotes</string>
    <string name="main_slider_fragment_title">Title Here</string>
    <string name="main_slider_fragment_description">Description Here</string>
    <string name="main_slider_fragment_next">Next</string>
    <string name="main_slider_fragment_skip">Skip</string>
    <string name="main_slider_fragment_continue">Continue</string>
    <string name="main_slider_fragment_icon_description">Icon Description</string>
    <string name="main_slider_fragment_title_welcome">Welcome to Chronotes</string>
    <string name="main_slider_fragment_title_calendar">Calendar</string>
    <string name="main_slider_fragment_title_notes">Notes</string>
    <string name="main_slider_fragment_title_reminders">Reminders</string>
    <string name="main_slider_fragment_description_welcome">See how many Chronotes can help you stay organized and get more done on your job</string>
    <string name="main_slider_fragment_description_calendar">Manage your time more effectively so you do not waste your time</string>
    <string name="main_slider_fragment_description_notes">Write down everything important that is not forgotten</string>
    <string name="main_slider_fragment_description_reminders">Do your routines without fear of missing out</string>
    <string name="login_layout_icon_placeholder">Icon</string>
    <string name="login_layout_email_placeholder">Email</string>
    <string name="login_layout_password_placeholder">Password</string>
    <string name="login_layout_remember_me">Remember me</string>
    <string name="login_layout_button">Login</string>
    <string name="login_layout_dont_have_an_account">Don\'t have an account ?</string>
    <string name="login_layout_register">REGISTER NOW</string>
    <string name="login_layout_continue_with">Continue with</string>
    <string name="login_message_success">Login success !</string>
    <string name="login_message_failed">Login failed !</string>
    <string name="login_message_invalid">Invalid email and password combination !</string>
    <string name="login_message_empty_field">Please fill all field !</string>
    <string name="login_message_wrong_email">Invalid email format !</string>
    <string name="login_message_wrong_password">Invalid password format !</string>
    <string name="login_message_offline">You are offline. Please connect to the internet !</string>
    <string name="register_layout_icon_placeholder">Icon</string>
    <string name="register_layout_name_placeholder">Name</string>
    <string name="register_layout_email_placeholder">Email</string>
    <string name="register_layout_password_placeholder">Password</string>
    <string name="register_layout_button">Register</string>
    <string name="register_layout_already_have_account">Already have account ?</string>
    <string name="register_layout_login">Back to Login</string>
    <string name="register_message_success">Register success !</string>
    <string name="register_message_failed">Register failed !</string>
    <string name="register_message_empty_field">Please fill all field !</string>
    <string name="register_message_exist_email">The email account already exists !</string>
    <string name="register_message_wrong_email">Invalid email format !</string>
    <string name="register_message_wrong_password">Invalid password format ! Password should be alphanumeric !</string>
    <string name="register_message_offline">You are offline. Please connect to the internet !</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">email@android.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_setting">Setting</string>
    <string name="home_message_error_load_data">Failed to load data. Please check your internet connection.</string>
    <string name="home_message_error_load_image">Failed to load image. Please check your internet connection.</string>
    <string name="profile_layout_icon_placeholder">Icon</string>
    <string name="profile_layout_name_placeholder">Name</string>
    <string name="profile_layout_change_password">Change Password</string>
    <string name="profile_layout_password_placeholder">New Password</string>
    <string name="profile_layout_confirm_password_placeholder">Old Password</string>
    <string name="profile_layout_update_button">Update</string>
    <string name="profile_layout_logout_button">Log Out</string>
    <string name="profile_message_success">Update success !</string>
    <string name="profile_message_failed">Update failed !</string>
    <string name="profile_message_error_load_data">Failed to load data. Please check your internet connection.</string>
    <string name="profile_message_invalid">Invalid password combination !</string>
    <string name="profile_message_empty_field">Please fill all field !</string>
    <string name="profile_message_wrong_password">Invalid password format !</string>
    <string name="profile_message_offline">You are offline. Please connect to the internet !</string>
    <string name="profile_message_invalid_extension">Invalid photo extension</string>
    <string name="notes_layout_message">Empty Notes</string>
    <string name="notes_layout_collaborator_view_collaborator">View Collaborator</string>
    <string name="notes_layout_collaborator_close">Close</string>
    <string name="notes_layout_collaborator_add">Add Collaborator</string>
    <string name="notes_layout_collaborator_email">Input User Email</string>
    <string name="notes_layout_collaborator_add_button">Add</string>
    <string name="notes_layout_collaborator_manage_reminder">Manage Reminder</string>
    <string name="notes_layout_collaborator_reminder">Reminder</string>
    <string name="notes_layout_collaborator_change_reminder">Change Reminder</string>
    <string name="notes_layout_collaborator_remove_reminder">Remove Reminder</string>
    <string name="notes_layout_detail_title_here">Title Note</string>
    <string name="notes_layout_detail_content_here">Content Note</string>
    <string name="notes_layout_detail_menu_collaborator">Collaborator</string>
    <string name="notes_layout_detail_menu_add_collaborator">Add Collaborator</string>
    <string name="notes_layout_detail_menu_view_collaborator">View Collaborator</string>
    <string name="notes_layout_detail_menu_share">Share</string>
    <string name="notes_layout_detail_menu_save">Save</string>
    <string name="notes_layout_detail_menu_remove">Remove</string>
    <string name="notes_message_failed">Your note is empty !</string>
    <string name="notes_message_insert_failed">Failed insert new note !</string>
    <string name="notes_message_insert_success">Success insert new note !</string>
    <string name="notes_message_update_failed">Failed update note !</string>
    <string name="notes_message_update_success">Success update note !</string>
    <string name="notes_message_remove_failed">Failed remove note !</string>
    <string name="notes_message_remove_success">Success remove note !</string>
    <string name="notes_message_share">I want to share my notes with you!\nTitle:</string>
    <string name="notes_message_dialog_remove_title">Remove Notes</string>
    <string name="notes_message_dialog_remove_content">Do you really want to remove this notes ?</string>
    <string name="notes_message_collaborator_failed">Failed to load collaborator</string>
    <string name="notes_message_collaborator_add_success">Collaborator added</string>
    <string name="notes_message_collaborator_add_failed">Failed to add collaborator</string>
    <string name="notes_message_collaborator_add_not_found">Collaborator email not found</string>
    <string name="notes_message_collaborator_dialog_remove_title">Remove collaborator</string>
    <string name="notes_message_collaborator_dialog_remove_content">Do you really want to remove this collaborator ?</string>
    <string name="notes_message_collaborator_adapter_you">You</string>
    <string name="notes_message_collaborator_adapter_error_self">Can\'t remove yourself</string>
    <string name="notes_message_collaborator_adapter_error_creator">Only creator can remove</string>
    <string name="notes_message_collaborator_adapter_remove_success">Delete collaborator success</string>
    <string name="calendar_layout_add_title">Add Task</string>
    <string name="calendar_layout_add_title_placeholder">Title</string>
    <string name="calendar_layout_add_detail_placeholder">Detail</string>
    <string name="calendar_layout_add_priority">Priority</string>
    <string name="calendar_layout_add_start_date">Start Date</string>
    <string name="calendar_layout_add_tap_here">Tap Here</string>
    <string name="calendar_layout_add_end_date">End Date</string>
    <string name="calendar_layout_add_tag_placeholder">Add Tag</string>
    <string name="calendar_layout_add_tag">Add</string>
    <string name="calendar_layout_add_reminder">Reminder</string>
    <string name="calendar_layout_add_new_task">Add New Task</string>
    <string name="calendar_layout_update_title">Task Detail</string>
    <string name="calendar_layout_update_title_placeholder">Title</string>
    <string name="calendar_layout_update_detail_placeholder">Detail</string>
    <string name="calendar_layout_update_priority">Priority</string>
    <string name="calendar_layout_update_start_date">Start Date</string>
    <string name="calendar_layout_update_tap_here">Tap Here</string>
    <string name="calendar_layout_update_end_date">End Date</string>
    <string name="calendar_layout_update_tag_placeholder">Add Tag</string>
    <string name="calendar_layout_update_tag">Add</string>
    <string name="calendar_layout_update_reminder">Reminder</string>
    <string name="calendar_layout_update_save_changes">Save Changes</string>
    <string name="calendar_layout_collaboration_email">Email</string>
    <string name="calendar_layout_collaboration_add_collaborator">Add Collaborator</string>
    <string name="calendar_layout_list_filter">Filter By Due</string>
    <string name="calendar_layout_list_sort">Sort By</string>
    <string name="calendar_layout_list_tag">Filter Tags</string>
    <string name="calendar_message_add_error_empty_title">Title Cannot Be Empty !</string>
    <string name="calendar_message_add_error_empty_detail">Detail Cannot Be Empty !</string>
    <string name="calendar_message_add_error_empty_start_date">Start Date Must Be Filled !</string>
    <string name="calendar_message_add_error_empty_end_date">End Date Must Be Filled !</string>
    <string name="calendar_message_add_error_date">End Date Can\'t Be Less Than Start Date !</string>
    <string name="calendar_message_update_error_empty_title">Title Cannot Be Empty !</string>
    <string name="calendar_message_update_error_empty_detail">Detail Cannot Be Empty !</string>
    <string name="calendar_message_update_error_empty_start_date">Start Date Must Be Filled !</string>
    <string name="calendar_message_update_error_empty_end_date">End Date Must Be Filled !</string>
    <string name="calendar_message_update_error_date">End Date Can\'t Be Less Than Start Date !</string>
    <string name="calendar_message_update_already_collaborator">Already a collaborator !</string>
    <string name="calendar_message_update_collaborator_not_found">User Not Found !</string>
    <string name="calendar_message_collaborator_error_remove">You are not authorized to remove collaborator !</string>
    <string name="calendar_add_filter_all">Show All Task</string>
    <string name="calendar_add_filter_today">Show Today</string>
    <string name="calendar_add_filter_week">Show This Week</string>
    <string name="calendar_add_filter_month">Show This Month</string>
</resources>