<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/collaborator"
        android:icon="@drawable/ic_collaborate"
        android:title="@string/notes_layout_detail_menu_collaborator"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/add_collaborator"
                android:title="@string/notes_layout_detail_menu_add_collaborator" />

            <item
                android:id="@+id/view_collaborator"
                android:title="@string/notes_layout_detail_menu_view_collaborator" />

        </menu>

    </item>

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more"
        android:title="More"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/notes_layout_detail_menu_share" />

            <item
                android:id="@+id/save"
                android:icon="@drawable/ic_save"
                android:title="@string/notes_layout_detail_menu_save" />

            <item
                android:id="@+id/remove_note"
                android:icon="@drawable/ic_trash"
                android:title="@string/notes_layout_detail_menu_remove" />

        </menu>

    </item>


</menu>