<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.login.LoginActivity">

    <LinearLayout
        style="@style/DefaultWidthHeight"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_blue_top">

            <ImageView
                style="@style/LoginRegisterImageViewIcon"
                android:contentDescription="@string/login_layout_icon_placeholder"
                android:src="@drawable/ic_chronotes_dark" />

        </FrameLayout>

        <RelativeLayout
            style="@style/LoginRegisterEditTextContainer"
            android:background="@drawable/bg_round_white">

            <EditText
                android:id="@+id/et_login_email"
                style="@style/LoginRegisterEditText"
                android:layout_toEndOf="@+id/iv_login_email_icon"
                android:hint="@string/login_layout_email_placeholder"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/iv_login_email_icon"
                style="@style/LoginRegisterImageView"
                android:contentDescription="@string/login_layout_icon_placeholder"
                android:src="@drawable/ic_email" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/LoginRegisterEditTextContainer"
            android:background="@drawable/bg_round_white">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_login_password_icon"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login_password"
                    style="@style/LoginRegisterEditText"
                    android:hint="@string/login_layout_password_placeholder"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_login_password_icon"
                android:contentDescription="@string/login_layout_icon_placeholder"
                style="@style/LoginRegisterImageView"
                android:src="@drawable/ic_password" />

        </RelativeLayout>

        <LinearLayout
            style="@style/DefaultWidthHeight"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_login_remember_me"
                style="@style/LoginRememberMe"
                android:text="@string/login_layout_remember_me" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            style="@style/LoginRegisterButton"
            android:text="@string/login_layout_button" />

        <TextView
            style="@style/LoginRegisterAfterButton"
            android:text="@string/login_layout_dont_have_an_account" />

        <TextView
            android:id="@+id/bt_login_to_register"
            style="@style/LoginRegister"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_layout_register" />

    </LinearLayout>

    <LinearLayout
        style="@style/DefaultWidthHeight"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/LoginRegisterContinueWith"
            android:text="@string/login_layout_continue_with" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </com.google.android.gms.common.SignInButton>

    </LinearLayout>

</RelativeLayout>