<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.register.RegisterActivity">

    <LinearLayout
        style="@style/DefaultWidthHeight"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_blue_top">

            <ImageView
                style="@style/LoginRegisterImageViewIcon"
                android:contentDescription="@string/register_layout_icon_placeholder"
                android:src="@drawable/ic_chronotes_dark" />

        </FrameLayout>

        <RelativeLayout
            style="@style/LoginRegisterEditTextContainer"
            android:background="@drawable/bg_round_white">

            <EditText
                android:id="@+id/et_register_name"
                style="@style/LoginRegisterEditText"
                android:layout_toEndOf="@+id/iv_register_name_icon"
                android:hint="@string/register_layout_name_placeholder"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/iv_register_name_icon"
                style="@style/LoginRegisterImageView"
                android:contentDescription="@string/register_layout_icon_placeholder"
                android:src="@drawable/ic_username" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/LoginRegisterEditTextContainer"
            android:background="@drawable/bg_round_white">

            <EditText
                android:id="@+id/et_register_email"
                style="@style/LoginRegisterEditText"
                android:layout_toEndOf="@+id/iv_register_email_icon"
                android:hint="@string/register_layout_email_placeholder"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/iv_register_email_icon"
                style="@style/LoginRegisterImageView"
                android:contentDescription="@string/register_layout_icon_placeholder"
                android:src="@drawable/ic_email" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/LoginRegisterEditTextContainer"
            android:background="@drawable/bg_round_white">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_register_password_icon"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_password"
                    style="@style/LoginRegisterEditText"
                    android:hint="@string/login_layout_password_placeholder"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_register_password_icon"
                style="@style/LoginRegisterImageView"
                android:contentDescription="@string/register_layout_icon_placeholder"
                android:src="@drawable/ic_password" />

        </RelativeLayout>

        <Button
            android:id="@+id/bt_register"
            style="@style/LoginRegisterButton"
            android:text="@string/register_layout_button" />

        <TextView
            style="@style/LoginRegisterAfterButton"
            android:text="@string/register_layout_already_have_account" />

        <TextView
            android:id="@+id/bt_register_to_login"
            style="@style/LoginRegister"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_layout_login" />

    </LinearLayout>

</RelativeLayout>