<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/note_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".home.ui.notes.NoteCollaboratorAdd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/notes_layout_collaborator_add"/>

    <EditText
        android:id="@+id/notes_email"
        android:backgroundTint="#5E5C5C"
        android:layout_marginBottom="10dp"
        android:textColor="#424141"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_layout_collaborator_email" />

    <Button
        android:id="@+id/notes_add_collaborator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/backgroundLightColor"
        android:text="@string/notes_layout_collaborator_add_button"/>

</LinearLayout>