<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ui.profile.ProfileActivity">

    <LinearLayout
        style="@style/WrapContentWidthHeight"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_blue_top">

            <ImageView
                android:id="@+id/iv_profile_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/profile_layout_icon_placeholder"
                android:src="@drawable/ic_back" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="70dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_loading_placeholder" />

        </FrameLayout>

        <RelativeLayout
            style="@style/LoginRegisterEditTextContainer"
            android:background="@drawable/bg_round_white">

            <EditText
                android:id="@+id/et_profile_name"
                style="@style/LoginRegisterEditText"
                android:layout_toEndOf="@+id/profile_name_icon"
                android:hint="@string/profile_layout_name_placeholder"
                android:inputType="text" />

            <ImageView
                android:id="@+id/profile_name_icon"
                style="@style/LoginRegisterImageView"
                android:src="@drawable/ic_username" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/LoginRegisterEditTextContainer"
            android:background="@drawable/bg_round_white">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/profile_password_icon"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_profile_password"
                    style="@style/LoginRegisterEditText"
                    android:hint="@string/profile_layout_password_placeholder"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/profile_password_icon"
                style="@style/LoginRegisterImageView"
                android:src="@drawable/ic_password" />

        </RelativeLayout>

        <Button
            android:id="@+id/bt_profile_update"
            style="@style/LoginRegisterButton"
            android:text="@string/profile_layout_update_button" />

    </LinearLayout>

    <LinearLayout
        style="@style/DefaultWidthHeight"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_profile_logout"
            style="@style/LogoutButton"
            android:text="@string/profile_layout_logout_button" />

    </LinearLayout>

</RelativeLayout>