<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_blue"
    tools:context=".main.slider.MainSliderFragment">

    <ImageView
        android:id="@+id/main_slider_fragment_icon"
        style="@style/MainSliderFragmentIcon"
        android:contentDescription="@string/main_slider_fragment_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/main_slider_fragment_title"
        style="@style/MainSliderFragmentTitleText"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/main_slider_fragment_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_slider_fragment_icon" />

    <TextView
        android:id="@+id/main_slider_fragment_description"
        style="@style/MainSliderFragmentDescriptionText"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/main_slider_fragment_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_slider_fragment_title" />

</androidx.constraintlayout.widget.ConstraintLayout>